fixing minor things with visible items

--- a/themes/slashcode/htdocs/slashcode_lite.css
+++ b/themes/slashcode/htdocs/slashcode_lite.css
@@ -52,7 +52,9 @@ div.briefarticles,
 #message,
 #message .content,
 #message .content p,
-#ostgnavbar
+#ostgnavbar,
+#usermenu ul.menu,
+#usermenu,  #wrapper
 {
 	color: #000 !important; background: transparent !important; border: none; font-family: serif;
 }
